--- a/ProjectBluejackCake_Group4/ProjectBluejackCake_Group4/ProjectBluejackCake_Group4.csproj
+++ b/ProjectBluejackCake_Group4/ProjectBluejackCake_Group4/ProjectBluejackCake_Group4.csproj
@@ -229,6 +229,7 @@
       <DependentUpon>Entity.edmx</DependentUpon>
     </Compile>
     <Compile Include="Factory\MemberFactory.cs" />
+    <Compile Include="Factory\PromotionFactory.cs" />
     <Compile Include="ForgotPassword.aspx.cs">
       <DependentUpon>ForgotPassword.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -294,6 +295,7 @@
     <Compile Include="Register.aspx.designer.cs">
       <DependentUpon>Register.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Repositories\PromotionRepositories.cs" />
     <Compile Include="Repositories\TransactionRepositories.cs" />
     <Compile Include="Transaction.aspx.cs">
       <DependentUpon>Transaction.aspx</DependentUpon>
