--- a/ProjectBluejackCake_Group4/ProjectBluejackCake_Group4/ProjectBluejackCake_Group4.csproj
+++ b/ProjectBluejackCake_Group4/ProjectBluejackCake_Group4/ProjectBluejackCake_Group4.csproj
@@ -1303,7 +1303,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Profile.aspx" />
-    <Content Include="Promotion.aspx" />
+    <Content Include="PromotionPage.aspx" />
     <Content Include="Register.aspx" />
     <Content Include="Transaction.aspx" />
     <Content Include="TransactionReport.aspx" />
@@ -1423,7 +1423,13 @@
     </Compile>
     <Compile Include="Promotion.cs">
       <DependentUpon>Entity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PromotionPage.aspx.cs">
+      <DependentUpon>PromotionPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PromotionPage.aspx.designer.cs">
+      <DependentUpon>PromotionPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Repositories\CakeRepositories.cs" />
     <Compile Include="Repositories\CartRepository.cs" />
@@ -1434,13 +1440,6 @@
     </Compile>
     <Compile Include="Profile.aspx.designer.cs">
       <DependentUpon>Profile.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Promotion.aspx.cs">
-      <DependentUpon>Promotion.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Promotion.aspx.designer.cs">
-      <DependentUpon>Promotion.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.aspx.cs">
@@ -1471,7 +1470,6 @@
     </Compile>
     <Compile Include="UpdateCake.aspx.cs">
       <DependentUpon>UpdateCake.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="UpdateCake.aspx.designer.cs">
       <DependentUpon>UpdateCake.aspx</DependentUpon>
